{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 71,
  "lineage": "7c74fecf-f05d-619a-7363-63ceb13d825c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:730335305826:instance/i-04036ed6e73d1cea5",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04036ed6e73d1cea5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03fa91c9417b61185",
            "private_dns": "ip-10-0-1-207.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07fc85665ae98c70e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090810efade6fe17f",
            "tags": {
              "Name": "backend-server-0"
            },
            "tags_all": {
              "Name": "backend-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086d413f787233115"
            ]
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:730335305826:instance/i-0ae270798b72029ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae270798b72029ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6b05ecda7e9b0d6",
            "private_dns": "ip-10-0-1-63.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-092003e6c9a2df7bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090810efade6fe17f",
            "tags": {
              "Name": "backend-server-1"
            },
            "tags_all": {
              "Name": "backend-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086d413f787233115"
            ]
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:730335305826:instance/i-03c9270031ad670be",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c9270031ad670be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5184e6d2b7cb500",
            "private_dns": "ip-10-0-1-103.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d25cf49f24d9cd4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090810efade6fe17f",
            "tags": {
              "Name": "backend-server-2"
            },
            "tags_all": {
              "Name": "backend-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086d413f787233115"
            ]
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:730335305826:instance/i-02b7b2781c526a6c1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b7b2781c526a6c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-052478d9047dd65e4",
            "private_dns": "ip-10-0-1-252.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb9208a2001295f2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090810efade6fe17f",
            "tags": {
              "Name": "backend-server-3"
            },
            "tags_all": {
              "Name": "backend-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086d413f787233115"
            ]
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:730335305826:instance/i-05c350c89b10909d4",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c350c89b10909d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a07d53c8efd7e22",
            "private_dns": "ip-10-0-1-40.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-091f63342098f3fc4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090810efade6fe17f",
            "tags": {
              "Name": "frontend-server-0"
            },
            "tags_all": {
              "Name": "frontend-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ee4ab358641a30d"
            ]
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:730335305826:instance/i-047162f3e01a7c1ec",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047162f3e01a7c1ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee9d86b264e14a9a",
            "private_dns": "ip-10-0-1-168.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3277c7ef8e9137b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090810efade6fe17f",
            "tags": {
              "Name": "frontend-server-1"
            },
            "tags_all": {
              "Name": "frontend-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ee4ab358641a30d"
            ]
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ass_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335305826:internet-gateway/igw-0f386858441174b06",
            "id": "igw-0f386858441174b06",
            "owner_id": "730335305826",
            "tags": {
              "Name": "ass_igw"
            },
            "tags_all": {
              "Name": "ass_igw"
            },
            "vpc_id": "vpc-001f09be4425e2b74"
          },
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ass_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335305826:route-table/rtb-065c451dc29cf9423",
            "id": "rtb-065c451dc29cf9423",
            "owner_id": "730335305826",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f386858441174b06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ass_public_rt"
            },
            "tags_all": {
              "Name": "ass_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f09be4425e2b74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b6d2181ea9f1d8",
            "route_table_id": "rtb-065c451dc29cf9423",
            "subnet_id": "subnet-090810efade6fe17f"
          },
          "dependencies": [
            "aws_internet_gateway.ass_igw",
            "aws_route_table.ass_public_rt",
            "aws_subnet.main",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335305826:security-group/sg-086d413f787233115",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086d413f787233115",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240829115805119600000002",
            "name_prefix": "terraform-",
            "owner_id": "730335305826",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend_sg"
            },
            "tags_all": {
              "Name": "backend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f09be4425e2b74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335305826:security-group/sg-00ee4ab358641a30d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ee4ab358641a30d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240829115805112300000001",
            "name_prefix": "terraform-",
            "owner_id": "730335305826",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend_sg"
            },
            "tags_all": {
              "Name": "frontend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-001f09be4425e2b74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335305826:subnet/subnet-090810efade6fe17f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090810efade6fe17f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335305826",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-001f09be4425e2b74"
          },
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ass_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:730335305826:vpc/vpc-001f09be4425e2b74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dd3e19a33a0a1d7b",
            "default_route_table_id": "rtb-040978c938ae955fd",
            "default_security_group_id": "sg-0c5e5a64a90ecdc89",
            "dhcp_options_id": "dopt-0b10031c2cb318564",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001f09be4425e2b74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-040978c938ae955fd",
            "owner_id": "730335305826",
            "tags": {
              "Name": "ass_vpc"
            },
            "tags_all": {
              "Name": "ass_vpc"
            }
          }
        }
      ]
    }
  ]
}